projects/vb6parse/snapshots/tests/library/datetime/monthname/monthname_parentheses.snap
---
source: projects/vb6parse/tests/library/datetime/monthname.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DimStatement
      children:
        - kind: DimKeyword
          text: Dim
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: name
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: Newline
          text: "\n"
    - kind: NameStatement
      children:
        - kind: NameKeyword
          text: name
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: EqualityOperator
              text: "="
            - kind: Whitespace
              text: " "
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: MonthName
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "6"
                            - kind: Comma
                              text: ","
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: BooleanLiteralExpression
                                  children:
                                    - kind: FalseKeyword
                                      text: "False"
                        - kind: RightParenthesis
                          text: )
            - kind: RightParenthesis
              text: )
    - kind: Newline
      text: "\n"
